--- a/its_page.html
+++ b/its_page.html
@@ -56,22 +56,29 @@
     <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-12">
             <h3 class="feature-title">Lorem ipsum</h3>
-            <img src="images/desktop.png" class="img-fluid">
+            <img class="about-image-1" src="images/qjdp8o2cval51.png" class="img-fluid">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante
                 luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
         </div>
 
         <div class="col-lg-4 col-md-4 col-sm-12">
             <h3 class="feature-title">Lorem ipsum</h3>
-            <img src="images/coding.png" class="img-fluid">
+            <img class="about-image-1" src="images/qjdp8o2cval51.png" class="img-fluid">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante
                 luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
         </div>
 
         <div class="col-lg-4 col-md-4 col-sm-12">
-
+            <h3 class="feature-title">Lorem ipsum</h3>
+            <img class="about-image-1" src="images/qjdp8o2cval51.png" class="img-fluid">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante
+                luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
         </div>
     </div>
+    <span id="date-display"></span><br>
+    <div id="table-container"></div>
+    <script>const displayedGroup = "its"</script>
+    <script src="script.js" defer></script>
 </div>
 <footer class="page-footer">
     <div class="container">
@@ -90,7 +97,8 @@
                     <br/>+ 01 234 567 88
                     <br/>+ 01 234 567 89</p>
             </div>
-            <div>
+        </div>
+    </div>
                 <div class="footer-copyright text-center">© 2020 Copyright: MyWebsite.com</div>
 </footer>
 <script src="index.js"></script>
