ita page images

--- a/ita_page.html
+++ b/ita_page.html
@@ -61,19 +61,19 @@ $content[] = $row["sisu"];
     <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-12">
             <h3 class="feature-title">Lorem ipsum</h3>
-            <img class="about-image-1" src="images/qjdp8o2cval51.png" class="img-fluid">
+            <img class="about-image-1" src="images/Python-Symbol.png" class="img-fluid">
             <p><?php echo $content[1] ?></p>
         </div>
 
         <div class="col-lg-4 col-md-4 col-sm-12">
             <h3 class="feature-title">Lorem ipsum</h3>
-            <img class="about-image-1" src="images/qjdp8o2cval51.png" class="img-fluid">
+            <img class="about-image-1" src="images/javascript.png" class="img-fluid">
             <p><?php echo $content[0] ?></p>
         </div>
 
         <div class="col-lg-4 col-md-4 col-sm-12">
             <h3 class="feature-title">Lorem ipsum</h3>
-            <img class="about-image-1" src="images/qjdp8o2cval51.png" class="img-fluid">
+            <img class="about-image-1" src="images/java-logo-vector.png" class="img-fluid">
             <p><?php echo $content[1] ?></p>
         </div>
     </div>
