--- a/ita_page.html
+++ b/ita_page.html
@@ -37,7 +37,7 @@ $content[] = $row["sisu"];
     <div class="collapse navbar-collapse" id="main-navigation">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
@@ -51,9 +51,8 @@ $content[] = $row["sisu"];
 <header class="page-header header container-fluid">
     <div class="overlay"></div>
     <div class="description">
-        <h1>Welcome to the Landing Page!</h1>
+        <h1>Tarkvaraarendajad</h1>
         <p><?php echo $content[0] ?></p>
-        <button class="btn btn-outline-secondary btn-lg">Tell Me More!</button>
     </div>
 
 </header>
