Added reading and displaying text from the database in the landing page.

--- a/ita_page.html
+++ b/ita_page.html
@@ -76,6 +76,7 @@ $content[] = $row["sisu"];
             <p><?php echo $content[1] ?></p>
         </div>
     </div>
+    <p><?php echo $content[2] ?></p>
     <span id="date-display"></span><br>
     <div id="table-container"></div>
     <script>const displayedGroup = "ita"</script>
