Integrated schedule buttons

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ $content[] = $row["sisu"];
             integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
             crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 
 
 </head>
