template for key events

--- a/index.html
+++ b/index.html
@@ -73,9 +73,19 @@ $content[] = $row["sisu"];
         </div>
 
         <div class="col-lg-4 col-md-4 col-sm-12">
-
         </div>
     </div>
+    <!--    Key events -->
+    <h1>Ligma</h1>
+    <p>{idk date placeholder}</p>
+    <p>siia tulevad väga tähtsad informatsiooni jupid tähtsatest võtmetest wow ligma siia tulevad väga tähtsad
+        informatsiooni jupid tähtsatest võtmetest wow ligma siia tulevad väga tähtsad informatsiooni jupid tähtsatest
+        võtmetest wow ligma siia tulevad väga tähtsad informatsiooni jupid tähtsatest võtmetest wow ligma siia tulevad
+        väga tähtsad</p>
+
+    <h1>Figma</h1>
+    <p>{insert img here} </p>
+    <p>Ligma nuuuuts placeholder text that aron will remove and addd his cool based database text Ligma nuuuuts placeholder text that aron will remove and addd his cool based database text Ligma nuuuuts placeholder text that aron will remove and addd his cool based database text Ligma nuuuuts placeholder text that aron will remove and addd his cool based database text </p>
 </div>
 <footer class="page-footer">
     <div class="container">
@@ -86,18 +96,18 @@ $content[] = $row["sisu"];
                 <p><?php echo $content[0] ?></p>
             </div>
         </div>
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <h6 class="text-uppercase font-weight-bold">Contact</h6>
-                <p>1640 Riverside Drive, Hill Valley, California
-                    <br/>info@mywebsite.com
-                    <br/>+ 01 234 567 88
-                    <br/>+ 01 234 567 89</p>
-            </div>
-            <div>
-            </div>
+        <div class="col-lg-4 col-md-4 col-sm-12">
+            <h6 class="text-uppercase font-weight-bold">Contact</h6>
+            <p>1640 Riverside Drive, Hill Valley, California
+                <br/>info@mywebsite.com
+                <br/>+ 01 234 567 88
+                <br/>+ 01 234 567 89</p>
+        </div>
+        <div>
+        </div>
 
-                <div class="footer-copyright text-center">© 2020 Copyright: MyWebsite.com</div>
-            </div>
+        <div class="footer-copyright text-center">© 2020 Copyright: MyWebsite.com</div>
+    </div>
 </footer>
 
 <script src="index.js"></script>
