--- a/index.html
+++ b/index.html
@@ -76,6 +76,13 @@ $content[] = $row["sisu"];
         </div>
     </div>
     <!--    Key events -->
+    <?php
+    while($row = $eventresult->fetch_assoc()) {
+    echo '<h1> ' . $row[oppegrupp] . ' </h1> ';
+    echo '<p>' . $row[sundmus] . '</p>';
+    echo '<p> ' . $row[toimumis_aeg] . ' - ' . $row[lopp_aeg] . ' </p>';
+    }
+    ?>
     <h1>Ligma</h1>
     <p>{idk date placeholder}</p>
     <p>siia tulevad väga tähtsad informatsiooni jupid tähtsatest võtmetest wow ligma siia tulevad väga tähtsad
