changed homepage icons spacing

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ $content[] = $row["sisu"];
 
 </header>
 <div class="container features">
-    <div class="row">
+    <div id="oppeaine" class="row">
         <div class="col-lg-4 col-md-4 col-sm-12">
             <h3 class="feature-title">IT Spetsialistid</h3>
             <a href="its_page.html"><img src="images/desktop.png" class="img-fluid"></a>
@@ -72,8 +72,7 @@ $content[] = $row["sisu"];
             <p><?php echo $content[0] ?></p>
         </div>
 
-        <div class="col-lg-4 col-md-4 col-sm-12">
-        </div>
+
     </div>
     <!--    Key events -->
     <h1>Ligma</h1>
